# autopattern

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_JP.md  vcpkg.json
include/: bad_noise.hpp  buffer.hpp  buffer.inl  conway_ca.hpp  forward.hpp  grid.hpp  grid.inl  noise.hpp  panel.hpp  panel_set.hpp
shaders/: fs_texture.sc  varying.def.sc  vs_fullscreen.sc
src/: bad_noise.cpp  conway_ca.cpp  main.cpp  noise.cpp  panel.cpp  panel_set.cpp
